# MetalKnight

./: .gitignore  Cargo.toml  README.md  build.gradle  settings.gradle
models/: train_badcrop.ipynb  train_screenshot.ipynb
py/: Dockerfile  Makefile  requirements.dev  requirements.txt
py/metal_knight/: app.py  run_inference.py
py/metal_knight/models/: __init__.py  adult_explicit.py  badcrop.py  base.py  screenshot.py
py/tests/models/: test_base.py
resources/: application.conf
resources/templates/: index.ftl
rust/: Cargo.toml  Dockerfile.debian  Makefile
rust/src/: main.rs  ml_model.rs
src/: Application.kt
test/: ApplicationTest.kt
