[package]
name = "metal_knight"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
ndarray = "0.17"
ort = { version="2.0.0-rc.10", default-features = true }
salvo = {  version = "0.85.0", features = ["oapi", "compression"] }
tokio = { version = "1.48.0", features = ["macros"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
